syntax = "proto3";

package pb.pbgreet;

import "test/proto/hello.proto";

option go_package = "github.com/fengjx/lc/test/proto/pbgreet";

// gomodpath=github.com/fengjx/lc
// epath=endpoint/api/great

// Greeter greet 示例
service Greeter {
  // SayHello Sends a greeting
  // http.path=/greeter/say-hello
  rpc SayHello(HelloReq) returns (HelloResp) {}

  // Ping ping service
  // http.path=/greeter/ping
  rpc Ping(PingReq) returns (PingResp) {}

  rpc GetUser(GetUserReq) returns (GetUserResp) {}
}

// The request message containing the user's name.
message HelloReq {
  string name = 1;
}

// The response message containing the greetings
message HelloResp {
  string message = 1;
}

message PingReq {
  string name = 1;
}

message PingResp {
  string message = 1;
}

message GetUserReq {
  string id = 1;
}

message GetUserResp {
  pb.user.User user = 1;
}